--- a/myst.yml
+++ b/myst.yml
@@ -9,7 +9,7 @@ project:
     Atribución 4.0 Internacional (CC BY 4.0).
   github: glacy/frontmatter-curso
   toc:
-    - file: README.md
+    - file: index.md
     - title: "Fundamentos"
       children:
         - file: sessions/01-introduccion-frontmatter.md
