feat: Initialize React presentation project with core files and dependencies

--- a/myst.yml
+++ b/myst.yml
@@ -27,6 +27,7 @@ project:
         - file: sessions/anexo-sintaxis-yaml.md
         - file: sessions/anexo-jupyterbook-vs-myst.md
         - file: sessions/anexo-banco-ejemplos.md
+        - file: sessions/presentacion.md
 site:
   title: 'Diseño semántico de documentos académicos'
   subtitle: "Frontmatter y metadatos en entornos reproducibles"
