--- a/presentation-react/package.json
+++ b/presentation-react/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.51.0",
     "vite": "npm:rolldown-vite@7.2.5",
     "vite-plugin-singlefile": "^2.3.0"
   },
